<resources>
    <string name="app_name">TruyenQQ</string>
    <string name="lbHome">Trang Chủ</string>
    <string name="lbKind">Thể Loại</string>
    <string name="lbStory">Tủ Sách</string>
    <string name="lbSearch">Tìm Kiếm</string>
    <string name="lbUser">Cá Nhân</string>
    <string name="lbRank">Xếp hạng</string>
    <string name="lbCalendar">Lịch</string>
    <string name="lbNewStory">Truyện Mới</string>
    <string name="lbDiscuss">Thảo Luận</string>
    <string name="lbNewStoryUpdate">Truyện mới cập nhật</string>
    <string name="lbMoreItem">Xem thêm</string>
    <string name="lbStoryMale">Truyện con trai</string>
    <string name="lbStoryFemale">Truyện con gái</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="lbName">Tên Truyện</string>
    <string name="lbInfoCategory">Đối tượng hướng tới của thể loại này là phái nam. Nội dung của những bộ manga này
        thường liên quan đến đánh nhau và/hoặc bạo lực (ở mức bình thường, không thái quá)
    </string>
    <string name="lbRule">Truyện được lấy từ TruyenQQ.com. Phần mềm chỉ lưu hành nội bộ và không chịu trách nhiệm bàn
        quyền sàn phẩm.
    </string>
    <string name="lbReadNow">Đọc Ngay</string>
    <string name="lbWriteAny">Viết gì đó</string>
    <string name="lbHistory">Lịch sử tìm kiếm</string>
    <string name="lbLoginText">Vui lòng đăng nhập vào tài khoản của bạn để tiếp tục sử dụng dịch vụ,</string>
    <string name="lbEmail">Nhập email</string>
    <string name="lbPassword">Nhập mật khẩu(lớn hơn 6)</string>
    <string name="lbRegister">Đăng ký tài khoản mới</string>
    <string name="lbLogin">Đăng Nhập</string>
    <string name="lbForgotPassword">Quên mật khẩu?</string>
    <string name="lbForgotText">Vui lòng nhập email của bạn để tiếp tục.</string>
    <string name="lbRegisterSend">Đăng Ký</string>
    <string name="lbLoginRequire">Vui lòng đăng nhập để sử dụng chức năng này</string>
    <string name="lbInformation">Thông tin cá nhân</string>
    <string name="lbNotification">Thông Báo</string>
    <string name="lbChangePassword">Thay đổi mật khẩu</string>
    <string name="lbLogout">Đăng xuất</string>
    <string name="lbRegisterRequire">Vui lòng điền thông tin điền thông tin đăng ký tài khoản.</string>
    <string name="lbOldPassWord">Mật khẩu hiện tại</string>
    <string name="lbNewPassWord">Mật khẩu mới</string>
    <string name="lbNewPassWordConfirm">Nhập lại mật khẩu mới</string>
    <string name="lbButtonForgotPassWord">Lấy lại mật khẩu</string>
    <string name="lbSaveChange">Lưu Thay đổi</string>
    <string name="sex">Giới Tính:</string>
    <string name="lbMale">Nam</string>
    <string name="lbFemale">Nữ</string>
    <string name="lbFirstName">Họ</string>
    <string name="lbLastName">Tên</string>
    <string name="lbPhone">Số điện thoại</string>
    <string name="lbFormatDate">Định dạng dd-MM-yyyy</string>
    <string name="lvSaveInfor">Lưu Thông Tin</string>
    <string name="lbDownloadName">Chọn chương để tải xuống</string>
    <string name="lbSeteclAll">Chọn tất cả</string>
    <string name="lbDownload">Tải Xuống</string>
    <string name="lbDelete">Xóa</string>
    <string name="lbNameCommentPost">Nhập tên bạn muốn</string>
    <string name="lbVersion">Version 1.0</string>
</resources>
