<?xml version="1.0" encoding="utf-8"?>
<menu
        xmlns:android="http://schemas.android.com/apk/res/android">
    <item android:id="@+id/navHome"
          android:icon="@drawable/ic_home"
          android:contentDescription="@string/lbHome"
          android:title="@string/lbHome"/>
    <item android:id="@+id/navCategory"
          android:contentDescription="@string/lbKind"
          android:icon="@drawable/ic_list"
          android:title="@string/lbKind"/>
    <item android:id="@+id/navNew"
          android:contentDescription="@string/lbNew"
          android:icon="@drawable/ic_new"
          android:title="@string/lbNew"/>
    <item android:id="@+id/navBookcase"
          android:contentDescription="@string/lbStory"
          android:icon="@drawable/ic_shelf"
          android:title="@string/lbStory"/>
    <item android:id="@+id/navUser"
          android:contentDescription="@string/lbUser"
          android:icon="@drawable/ic_user"
          android:title="@string/lbUser"/>
</menu>