<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent">
    <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">
        <TextView
                android:id="@+id/tvBackInfor"
                android:drawableTop="@drawable/ic_before"
                android:paddingTop="15dp"
                android:layout_marginStart="5dp"
                android:layout_marginTop="5dp"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                android:layout_width="50dp"
                android:layout_height="50dp"/>
        <TextView
                android:text="@string/lbInformation"
                android:textSize="18sp"
                android:textColor="@android:color/black"
                android:gravity="center"
                android:layout_marginStart="15dp"
                android:layout_marginEnd="15dp"
                app:layout_constraintTop_toTopOf="@id/tvBackInfor"
                app:layout_constraintBottom_toBottomOf="@id/tvBackInfor"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                android:layout_width="0dp"
                android:layout_height="wrap_content"/>
        <com.github.siyamed.shapeimageview.RoundedImageView
                android:id="@+id/imgAvatar"
                android:src="@drawable/ic_nouser"
                android:layout_marginTop="100dp"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:siRadius="50dp"
                android:layout_width="100dp"
                android:layout_height="100dp"/>
        <EditText
                android:id="@+id/editLastName"
                android:hint="@string/lbFirstName"
                android:inputType="textPersonName"
                android:drawableStart="@drawable/ic_infor_person"
                android:drawablePadding="10dp"
                android:layout_marginTop="20sp"
                android:layout_marginStart="15dp"
                android:layout_marginEnd="15dp"
                app:layout_constraintTop_toBottomOf="@id/imgAvatar"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                android:layout_width="0dp"
                android:layout_height="wrap_content"/>
        <EditText
                android:id="@+id/editFirstName"
                android:hint="@string/lbLastName"
                android:inputType="textPersonName"
                android:drawableStart="@drawable/ic_infor_person"
                android:drawablePadding="10dp"
                android:layout_marginStart="15dp"
                android:layout_marginEnd="15dp"
                app:layout_constraintTop_toBottomOf="@id/editLastName"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                android:layout_width="0dp"
                android:layout_height="wrap_content"/>
        <EditText
                android:id="@+id/editPhone"
                android:hint="@string/lbPhone"
                android:inputType="phone"
                android:drawableStart="@drawable/ic_phone"
                android:drawablePadding="10dp"
                android:layout_marginStart="15dp"
                android:layout_marginEnd="15dp"
                app:layout_constraintTop_toBottomOf="@id/editFirstName"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                android:layout_width="0dp"
                android:layout_height="wrap_content"/>
        <EditText
                android:id="@+id/editEmail"
                android:focusableInTouchMode="false"
                android:drawableStart="@drawable/ic_email_cycle"
                android:drawablePadding="10dp"
                android:layout_marginStart="15dp"
                android:layout_marginEnd="15dp"
                app:layout_constraintTop_toBottomOf="@id/editPhone"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                android:layout_width="0dp"
                android:layout_height="wrap_content"/>
        <EditText
                android:id="@+id/editDate"
                android:hint="@string/lbFormatDate"
                android:focusableInTouchMode="false"
                android:drawableStart="@drawable/ic_birthday"
                android:drawablePadding="10dp"
                android:layout_marginStart="15dp"
                android:layout_marginEnd="15dp"
                app:layout_constraintTop_toBottomOf="@id/editEmail"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                android:layout_width="0dp"
                android:layout_height="wrap_content"/>
        <TextView
                android:id="@+id/lbSex"
                android:text="@string/sex"
                android:textSize="17sp"
                android:textColor="@android:color/black"
                android:layout_marginTop="10dp"
                android:layout_marginStart="20dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/editDate"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>
        <RadioGroup
                android:orientation="horizontal"
                app:layout_constraintTop_toTopOf="@id/lbSex"
                app:layout_constraintStart_toEndOf="@id/lbSex"
                app:layout_constraintBottom_toBottomOf="@id/lbSex"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">
            <RadioButton
                    android:id="@+id/checkboxMale"
                    android:text="@string/lbMale"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"/>
            <RadioButton
                    android:id="@+id/checkboxFemale"
                    android:text="@string/lbFemale"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"/>
        </RadioGroup>
        <Button
                android:id="@+id/btnSaveInfor"
                android:text="@string/lvSaveInfor"
                android:textAllCaps="false"
                android:background="@drawable/border_color_button_radius"
                android:layout_marginTop="20dp"
                android:layout_marginStart="20dp"
                android:layout_marginEnd="20dp"
                app:layout_constraintTop_toBottomOf="@id/lbSex"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                android:layout_width="0dp"
                android:layout_height="wrap_content"/>
        <androidx.constraintlayout.widget.Guideline
                android:id="@+id/glTopUser"
                android:orientation="horizontal"
                app:layout_constraintGuide_percent="0.1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>
    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.core.widget.NestedScrollView>