<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent">
    <TextView
            android:id="@+id/tvBackDownload"
            android:drawableTop="@drawable/ic_before"
            android:paddingTop="15dp"
            android:layout_marginStart="5dp"
            android:layout_marginTop="5dp"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_width="50dp"
            android:layout_height="50dp"/>
    <TextView
            android:text="@string/lbDownloadName"
            android:textSize="18sp"
            android:textColor="@android:color/black"
            android:gravity="center"
            android:layout_marginStart="15dp"
            android:layout_marginEnd="15dp"
            app:layout_constraintTop_toTopOf="@id/tvBackDownload"
            app:layout_constraintBottom_toBottomOf="@id/tvBackDownload"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_width="0dp"
            android:layout_height="wrap_content"/>
    <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rcvDownload"
            app:layout_constraintTop_toBottomOf="@+id/tvBackDownload"
            app:layout_constraintBottom_toTopOf="@id/botNavigationDownload"
            android:layout_width="match_parent"
            android:layout_height="0dp"/>
    <com.google.android.material.bottomnavigation.BottomNavigationView
            android:id="@+id/botNavigationDownload"
            app:layout_constraintBottom_toBottomOf="parent"
            android:layout_width="match_parent"
            android:layout_height="?actionBarSize">
        <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">
            <Button
                    android:id="@+id/btnSelectAll"
                    android:text="@string/lbSeteclAll"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintEnd_toStartOf="@id/btnDownload"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"/>
            <Button
                    android:id="@+id/btnDownload"
                    android:text="@string/lbDownload"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toEndOf="@id/btnSelectAll"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"/>
        </androidx.constraintlayout.widget.ConstraintLayout>
    </com.google.android.material.bottomnavigation.BottomNavigationView>
</androidx.constraintlayout.widget.ConstraintLayout>