<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/layoutUser"
        xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto"
        android:orientation="vertical"
        android:background="@android:color/white"
        android:layout_width="match_parent"
        android:layout_height="match_parent">
    <com.github.siyamed.shapeimageview.RoundedImageView
            android:id="@+id/imgAvatar"
            app:layout_constraintTop_toTopOf="@id/glTopUser"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:siRadius="50dp"
            android:layout_width="100dp"
            android:layout_height="100dp"/>
    <TextView
            android:id="@+id/tvName"
            android:text="Hữu Lộc"
            android:textSize="18sp"
            android:gravity="center"
            app:layout_constraintTop_toBottomOf="@id/imgAvatar"
            app:layout_constraintEnd_toEndOf="@id/imgAvatar"
            app:layout_constraintStart_toStartOf="@id/imgAvatar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>
    <TextView
            android:id="@+id/tvInformation"
            android:text="@string/lbInformation"
            android:drawableStart="@drawable/ic_infor_person"
            android:drawablePadding="15dp"
            android:onClick="changeInfor"
            android:textSize="18sp"
            android:paddingTop="5dp"
            android:paddingBottom="5dp"
            android:layout_marginTop="20dp"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"
            app:layout_constraintTop_toBottomOf="@id/tvName"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_width="0dp"
            android:layout_height="wrap_content"/>
    <TextView
            android:id="@+id/tvNotification"
            android:text="@string/lbNotification"
            android:drawableStart="@drawable/ic_notification"
            android:drawablePadding="15dp"
            android:textSize="18sp"
            android:paddingTop="5dp"
            android:paddingBottom="5dp"
            android:layout_marginTop="5dp"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"
            app:layout_constraintTop_toBottomOf="@id/tvInformation"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_width="0dp"
            android:layout_height="wrap_content"/>
    <TextView
            android:id="@+id/tvChangePassword"
            android:drawableStart="@drawable/ic_change_password"
            android:drawablePadding="15dp"
            android:text="@string/lbChangePassword"
            android:textSize="18sp"
            android:onClick="changePassWord"
            android:paddingTop="5dp"
            android:paddingBottom="5dp"
            android:layout_marginTop="5dp"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"
            app:layout_constraintTop_toBottomOf="@id/tvNotification"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_width="0dp"
            android:layout_height="wrap_content"/>
    <TextView
            android:id="@+id/tvLogout"
            android:text="@string/lbLogout"
            android:drawableStart="@drawable/ic_logout"
            android:drawablePadding="15dp"
            android:textSize="18sp"
            android:onClick="logOut"
            android:paddingTop="5dp"
            android:paddingBottom="5dp"
            android:layout_marginTop="5dp"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"
            app:layout_constraintTop_toBottomOf="@id/tvChangePassword"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_width="0dp"
            android:layout_height="wrap_content"/>
    <androidx.constraintlayout.widget.Guideline
            android:id="@+id/glTopUser"
            android:orientation="horizontal"
            app:layout_constraintGuide_percent="0.1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>
</androidx.constraintlayout.widget.ConstraintLayout>