<?xml version="1.0" encoding="utf-8"?>
<layout>
    <data>
        <variable
                name="viewModel"
                type="huuloc.uit.edu.truyenqq.fragments.user.ViewModelUser"/>
    </data>
    <androidx.constraintlayout.widget.ConstraintLayout
            xmlns:android="http://schemas.android.com/apk/res/android"
            xmlns:app="http://schemas.android.com/apk/res-auto"
            android:background="@android:color/white"
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="match_parent">
        <TextView
                android:onClick="onBack"
                android:drawableTop="@drawable/ic_before"
                android:paddingTop="15dp"
                android:layout_marginStart="5dp"
                android:layout_marginTop="5dp"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                android:layout_width="50dp"
                android:layout_height="50dp"/>
        <TextView
                android:id="@+id/lbText2"
                android:text="@string/lbForgotText"
                android:textSize="20sp"
                android:gravity="center"
                android:layout_marginStart="15dp"
                android:layout_marginEnd="15dp"
                app:layout_constraintTop_toTopOf="@id/glLogin"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                android:layout_width="0dp"
                android:layout_height="wrap_content"/>
        <EditText
                android:id="@+id/editUser2"
                android:text="@{viewModel.email}"
                android:afterTextChanged="@{(editable)-> viewModel.setEmail(editable)}"
                android:hint="@string/lbEmail"
                android:drawableStart="@drawable/ic_email"
                android:inputType="textEmailAddress"
                android:layout_marginStart="15dp"
                android:layout_marginEnd="15dp"
                android:layout_marginTop="20dp"
                android:drawablePadding="10dp"
                app:layout_constraintTop_toBottomOf="@id/lbText2"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                android:layout_width="0dp"
                android:layout_height="wrap_content"/>
        <Button
                android:id="@+id/btnSendForgot"
                android:text="@string/lbButtonForgotPassWord"
                android:textAllCaps="false"
                android:textSize="20sp"
                android:background="@drawable/border_color_button_radius"
                android:layout_marginStart="15dp"
                android:layout_marginEnd="15dp"
                android:layout_marginTop="20dp"
                app:layout_constraintTop_toBottomOf="@id/editUser2"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                android:layout_width="0dp"
                android:layout_height="wrap_content"/>
        <androidx.constraintlayout.widget.Guideline
                android:id="@+id/glLogin"
                android:orientation="horizontal"
                app:layout_constraintGuide_percent="0.15"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>